[project]
name = "pymoo-driver"
version = "0.1.0"
description = "An OpenMDAO driver that integrates the pymoo multi-objective optimization library into OpenMDAO workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "openmdao>=3.38.0",
    "pymoo>=0.6.1.3",
]

[project.optional-dependencies]
optuna = [
    "optuna>=4.3.0",
]
plotting = [
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
